examples/test/testpolicy5228.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5228
  namespace: namespace50
spec:
  podSelector:
    matchLabels:
      key11: value5
      key39: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value35
      podSelector:
        matchLabels:
          key44: value44
          key40: value36
          key5: value39
